KERNEL_IMAGETYPE cleanup Proper place for KERNEL_IMAGETYPE is machine config as there is no machine which use miscelanous types of kernel. Moved found occurences.

--- a/conf/machine/geodegx.conf
+++ b/conf/machine/geodegx.conf
@@ -8,3 +8,5 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-geodegx"
 BOOTSTRAP_EXTRA_RDEPENDS = "kernel pciutils udev kernel-modules"
 
 udevdir = "/dev"
+
+KERNEL_IMAGETYPE = "bzImage"
