--- a/conf/machine/geodelx.conf
+++ b/conf/machine/geodelx.conf
@@ -5,3 +5,5 @@ PREFERRED_PROVIDERS += " virtual/${TARGET_PREFIX}depmod:module-init-tools-cross"
 PREFERRED_PROVIDER_virtual/kernel="linux-geodelx"
 
 SELECTED_OPTIMIZATION_glibc := "${@'${SELECTED_OPTIMIZATION}'.replace('-fomit-frame-pointer', '')}"
+
+KERNEL_IMAGETYPE = "bzImage"
