--- a/conf/machine/kb9202.conf
+++ b/conf/machine/kb9202.conf
@@ -18,3 +18,5 @@ require conf/machine/include/tune-arm920t.conf
 ROOT_FLASH_SIZE = "12"
 
 MACHINE_FEATURES = "kernel26 usbhost usbgadget irda"
+
+KERNEL_IMAGETYPE = "uImage"
