--- a/conf/machine/netvista.conf
+++ b/conf/machine/netvista.conf
@@ -9,6 +9,8 @@ PACKAGE_EXTRA_ARCHS = "netvista"
 PREFERRED_PROVIDER_virtual/kernel = "linux-x86"
 XSERVER = "xserver-kdrive-vesa"
 
+KERNEL_IMAGETYPE = "bzImage"
+
 # todo: convert to task-base
 # BOOTSTRAP_EXTRA_RDEPENDS = "kernel pciutils udev kernel-modules"
 MACHINE_EXTRA_RRECOMMENDS = " kernel-modules"
