--- a/conf/machine/progear.conf
+++ b/conf/machine/progear.conf
@@ -9,6 +9,8 @@ PACKAGE_EXTRA_ARCHS = "x86 i386 i486 i586"
 PREFERRED_PROVIDER_virtual/kernel = "linux"
 PREFERRED_PROVIDER_virtual/xserver = "xserver-xorg"
 
+KERNEL_IMAGETYPE = "bzImage"
+
 OLDEST_KERNEL = "2.6.17"
 GLIBC_ADDONS = "nptl"
 GLIBC_EXTRA_OECONF = "--with-tls"
