--- a/conf/machine/sarge-at91.conf
+++ b/conf/machine/sarge-at91.conf
@@ -21,3 +21,5 @@ PREFERRED_PROVIDER_virtual/kernel = "linux"
 # device has own patchset for u-boot 1.1.6
 PREFERRED_VERSION_u-boot = "1.1.6"
 PREFERRED_VERSION_linux  = "2.6.21"
+
+KERNEL_IMAGETYPE = "uImage"
