--- a/conf/machine/wrap.conf
+++ b/conf/machine/wrap.conf
@@ -32,3 +32,5 @@ IMAGE_DEVICE_TABLES = "files/device_table-minimal.txt"
 # glibc
 GLIBC_ADDONS = "nptl"
 GLIBC_EXTRA_OECONF = "--with-tls"
+
+KERNEL_IMAGETYPE = "bzImage"
