--- a/conf/machine/x86.conf
+++ b/conf/machine/x86.conf
@@ -7,6 +7,8 @@ TARGET_ARCH = "i486"
 # TARGET_VENDOR = "-oe"
 PACKAGE_EXTRA_ARCHS = "x86"
 PREFERRED_PROVIDER_virtual/kernel = "linux-x86"
+
+KERNEL_IMAGETYPE = "bzImage"
 # todo: convert to task-base
 # BOOTSTRAP_EXTRA_RDEPENDS = "kernel pciutils udev kernel-modules"
 MACHINE_EXTRA_RRECOMMENDS = " kernel-modules"
