--- a/conf/machine/at32stk1000.conf
+++ b/conf/machine/at32stk1000.conf
@@ -19,3 +19,5 @@ SERIAL_CONSOLE = "115200"
 # used by some images
 ROOT_FLASH_SIZE = "8"
 EXTRA_IMAGECMD_jffs2 = " --big-endian --pagesize=4096 --eraseblock=65536"
+
+KERNEL_IMAGETYPE = "uImage"
