--- a/conf/machine/atngw100.conf
+++ b/conf/machine/atngw100.conf
@@ -18,3 +18,4 @@ SERIAL_CONSOLE = "115200"
 ROOT_FLASH_SIZE = "8"
 EXTRA_IMAGECMD_jffs2 = " --big-endian --pagesize=4096 --eraseblock=65536"
 
+KERNEL_IMAGETYPE = "uImage"
