--- a/conf/machine/epia.conf
+++ b/conf/machine/epia.conf
@@ -5,6 +5,7 @@ PACKAGE_EXTRA_ARCHS = "i386 i486"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-epia"
 OLDEST_KERNEL = "2.6.5"
+KERNEL_IMAGETYPE = "bzImage"
 
 GLIBC_ADDONS = "nptl"
 GLIBC_EXTRA_OECONF = "--with-tls"
