--- a/conf/machine/guinness.conf
+++ b/conf/machine/guinness.conf
@@ -11,6 +11,8 @@ PREFERRED_PROVIDER_xserver = "xserver-xorg"
 
 udevdir = "/dev"
 
+KERNEL_IMAGETYPE = "bzImage"
+
 OLDEST_KERNEL = "2.6.17"
 GLIBC_ADDONS = "nptl"
 GLIBC_EXTRA_OECONF = "--with-tls"
