--- a/conf/machine/i686-generic.conf
+++ b/conf/machine/i686-generic.conf
@@ -11,6 +11,8 @@ PACKAGE_EXTRA_ARCHS = "x86 i386 i486 i586"
 PREFERRED_PROVIDER_virtual/kernel = "linux-x86"
 OLDEST_KERNEL = "2.6.20"
 
+KERNEL_IMAGETYPE = "bzImage"
+
 GLIBC_ADDONS = "nptl"
 GLIBC_EXTRA_OECONF = "--with-tls"
 
