angstrom: add feed archs for new gumstix machines

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -71,6 +71,8 @@ FEED_ARCH_devkitidp-pxa255 = "armv5te"
 FEED_ARCH_e680 		= "armv5te"
 FEED_ARCH_er0100 	= "armv5te"
 FEED_ARCH_gumstix 	= "armv5te"
+FEED_ARCH_gumstix-verdex = "armv5te"
+FEED_ARCH_gumstix-connex = "armv5te"
 FEED_ARCH_h1910 	= "armv5te"
 FEED_ARCH_h2200 	= "armv5te"
 FEED_ARCH_h3900 	= "armv5te"
