--- a/conf/machine/omap2420h4.conf
+++ b/conf/machine/omap2420h4.conf
@@ -1,17 +1,16 @@
 #@TYPE: Machine
-#@NAME: OMAP1610 cpu on an H2 board
-#@DESCRIPTION: Machine configuration for the OMAP H2 development board with a 1610 processor
+#@NAME: OMAP2420 cpu on an H4 board
+#@DESCRIPTION: Machine configuration for the OMAP H4 development board with a 2420 processor
 
 TARGET_ARCH = "arm"
-PACKAGE_EXTRA_ARCHS = "armv5te armv6te"
-
+PACKAGE_EXTRA_ARCHS = "armv4t armv5te armv6"
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
-PREFERRED_PROVIDER_virtual/kernel = "linux-omap-2.6"
-PREFERRED_PROVIDERS += "virtual/${TARGET_PREFIX}depmod:module-init-tools-cross"
-
-BOOTSTRAP_EXTRA_RDEPENDS += "modutils-collateral"
+PREFERRED_PROVIDER_virtual/kernel = "linux-omap2"
+PREFERRED_VERSION_u-boot = "1.1.4"
 
 SERIAL_CONSOLE ?= "115200 ttyS0"
 EXTRA_IMAGECMD_jffs2 = "--pad --little-endian --eraseblock=0x40000"
 
-require conf/machine/include/tune-arm926ejs.conf
+MACHINE_FEATURES = "kernel26"
+
+require conf/machine/include/tune-arm1136jf-s.conf
