--- a/conf/bitbake.conf
+++ b/conf/bitbake.conf
@@ -108,6 +108,8 @@ PROVIDES = ""
 PROVIDES_prepend = "${P} ${PF} ${PN} "
 RPROVIDES = ""
 
+MULTI_PROVIDER_WHITELIST = "virtual/libintl"
+
 PACKAGES = "${PN}-dbg ${PN} ${PN}-doc ${PN}-dev ${PN}-locale"
 FILES = ""
 
