Fixed x86-prescott and added x86-32-nocona machines.

--- a/conf/machine/x86-32-nocona.conf
+++ b/conf/machine/x86-32-nocona.conf
@@ -1,12 +1,13 @@
 #@TYPE: Machine
-#@NAME: x86-prescott
-#@DESCRIPTION: Machine configuration for a generic i686 machine
+#@NAME: x86-nocona
+#@DESCRIPTION: Machine configuration for Intel 'Nocona' processor in 32-bit mode
+#
 
 TARGET_ARCH = "i686"
-MACHINE_ARCH = "x86-prescott"
+MACHINE_ARCH = "x86-32-nocona"
 PACKAGE_EXTRA_ARCHS = "x86 i386 i486 i586 i686"
 
-require conf/machine/include/tune-x86-prescott.conf
+require conf/machine/include/tune-x86-nocona.conf
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-x86"
 OLDEST_KERNEL = "2.6.20"
