angstrom: add preferred provider for avahi

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -220,8 +220,6 @@ PREFERRED_VERSION_linux-handhelds-2.6               ?= "2.6.21-hh12"
 RDEPENDS_kernel-base_hx4700 = ""
 RDEPENDS_kernel-base_htcuniversal = ""
 
-PREFERRED_VERSION_linux_at91sam9263ek               ?= "2.6.20"
-
 # Needed for crappy ipaqs with broken hostap in the kernel
 PREFERRED_VERSION_hostap-modules                    ?= "0.4.7"
 PREFERRED_VERSION_hostap-utils                      ?= "0.4.7"
@@ -248,6 +246,8 @@ PREFERRED_VERSION_osb-browser      = "0.5.0+svn${SRCDATE}"
 PREFERRED_VERSION_osb-jscore       = "0.5.2+svn${SRCDATE}"
 PREFERRED_VERSION_osb-nrcit        = "0.5.2+svn${SRCDATE}"
 PREFERRED_VERSION_osb-nrcore       = "0.5.2+svn${SRCDATE}"
+
+PREFERRED_PROVIDER_avahi = "avahi"
 
 #Small machines prefer kdrive, but we might ship full Xorg in other images
 PREFERRED_PROVIDER_virtual/xserver  ?= "xserver-kdrive"
