omap5912osk.conf : Clean up machine file.

--- a/conf/machine/omap5912osk.conf
+++ b/conf/machine/omap5912osk.conf
@@ -3,13 +3,10 @@
 #@DESCRIPTION: Machine configuration for the OMAP Starter Kit with a 5912 processor
 
 TARGET_ARCH = "arm"
-PACKAGE_EXTRA_ARCHS = "armv5te"
-
-HOTPLUG = "udev"
+PACKAGE_EXTRA_ARCHS = "armv4 armv4t armv5e armv5te"
 
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 PREFERRED_PROVIDER_virtual/kernel = "linux-omap1"
-PREFERRED_PROVIDERS += "virtual/${TARGET_PREFIX}depmod:module-init-tools-cross"
 
 # PREFERRED_VERSION_u-boot = "1.1.6"
 
@@ -30,24 +27,3 @@ MACHINE_EXTRA_RRECOMMENDS = "kernel-module-ide-cs \
 
 require conf/machine/include/tune-arm926ejs.conf
 
-# old modules setup - partially need to be added into MACHINE_EXTRA_RRECOMMENDS
-
-# PCMCIA Modules
-##BOOTSTRAP_EXTRA_RDEPENDS += "kernel-module-pcmcia-core kernel-module-pcmcia"
-##BOOTSTRAP_EXTRA_RDEPENDS += "kernel-module-omap-cf"
-
-# IDE modules
-#BOOTSTRAP_EXTRA_RDEPENDS += "kernel-module-ide-cs kernel-module-ide-disk"
-#BOOTSTRAP_EXTRA_RDEPENDS += "kernel-module-ide-core"
-
-# DOS and VFAT modules
-#BOOTSTRAP_EXTRA_RDEPENDS += "kernel-module-msdos kernel-module-nls-iso8859-1"
-#BOOTSTRAP_EXTRA_RDEPENDS += "kernel-module-nls-cp437 kernel-module-nls-base"
-#BOOTSTRAP_EXTRA_RDEPENDS += "kernel-module-vfat kernel-module-fat"
-
-# Video er LCD Driver
-##BOOTSTRAP_EXTRA_RDEPENDS += "kernel-module-fb kernel-module-cfbimgblt kernel-module-cfbcopyarea"
-##BOOTSTRAP_EXTRA_RDEPENDS += "kernel-module-cfbfillrect kernel-module-omapfb kernel-module-softcursor"
-
-# DSP Interface
-##BOOTSTRAP_EXTRA_RDEPENDS += "kernel-module-dsp"
