palmtx.conf: Include more modules, makes sound, battery and pcmcia work.

--- a/conf/machine/palmtx.conf
+++ b/conf/machine/palmtx.conf
@@ -15,4 +15,15 @@ SERIAL_CONSOLE = "115200 ttyS0"
 
 MACHINE_EXTRA_RRECOMMENDS += "kernel-module-pxa27x-keyboard \
                            kernel-module-wm97xx-ts \
-                           kernel-module-palmtx-battery"
+                           kernel-module-palmtx-battery \
+                           kernel-module-palmtx-border \
+                           kernel-module-bcm2035-uart \
+                           kernel-module-palmtx-pcmcia \
+                           kernel-module-pcmcia-core \
+                           kernel-module-pda-power \
+                           kernel-module-pxa2xx-core \
+                           kernel-module-snd-pxa2xx-ac97 \
+                           kernel-module-snd-pxa2xx-pcm"
+
+
+module_autoload_g_ether = "g_ether"
