palm.conf: Autoload the TX battery module.

--- a/conf/machine/include/palm.conf
+++ b/conf/machine/include/palm.conf
@@ -57,7 +57,7 @@ module_autoload_snd-timer = "snd-timer"
 module_autoload_soundcore = "soundcore"
 module_autoload_wm97xx-ts = "wm97xx-ts"
 module_autoload_pxa27x-keyboard = "pxa27x-keyboard"
-module_autoload_palmtx-battery = "palmtx-battery"
+module_autoload_palmtx_battery = "palmtx_battery"
 module_autoload_palmz72_battery = "palmz72_battery"
 module_autoload_i2c-dev = "i2c-dev"
 module_autoload_i2c-pxa = "i2c-pxa"
