--- a/conf/machine/fic-gta02.conf
+++ b/conf/machine/fic-gta02.conf
@@ -8,6 +8,7 @@ TARGET_ARCH = "arm"
 PACKAGE_EXTRA_ARCHS = "armv4t"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-gta02"
+UBOOT_ENTRYPOINT = "30008000"
 
 MACHINE_FEATURES = "kernel26 apm alsa bluetooth usbgadget usbhost phone wifi"
 
