--- a/conf/machine/smdk2443.conf
+++ b/conf/machine/smdk2443.conf
@@ -7,6 +7,7 @@ TARGET_ARCH = "arm"
 PACKAGE_EXTRA_ARCHS = "armv4t"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-smdk2443"
+UBOOT_ENTRYPOINT = "30008000"
 
 # used by sysvinit_2
 SERIAL_CONSOLE = "115200 ttySAC0"
