dht-walnot: set UBOOT_ENTRYPOINT in preparation of kernel recipe cleanup

--- a/conf/machine/dht-walnut.conf
+++ b/conf/machine/dht-walnut.conf
@@ -8,6 +8,7 @@ TARGET_ARCH = "powerpc"
 PACKAGE_EXTRA_ARCHS = "all ${MACHINE} ppc ppc405"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-${MACHINE}"
+UBOOT_ENTRYPOINT = "0"
 
 MACHINE_FEATURES = "kernel26 ext2"
 MACHINE_TASK_PROVIDER = "task-base"
