rename linux-gta01 to linux-openmoko, this kernel will be useful on a family of devices, GTA01, GTA02 being the first two models.

--- a/conf/machine/fic-gta01.conf
+++ b/conf/machine/fic-gta01.conf
@@ -7,7 +7,7 @@
 TARGET_ARCH = "arm"
 PACKAGE_EXTRA_ARCHS = "armv4t"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-gta01"
+PREFERRED_PROVIDER_virtual/kernel = "linux-openmoko"
 UBOOT_ENTRYPOINT = "30008000"
 
 MACHINE_FEATURES = "kernel26 apm alsa bluetooth usbgadget usbhost phone"
