bitbake.conf: Define various variables (from poky)

--- a/conf/bitbake.conf
+++ b/conf/bitbake.conf
@@ -133,7 +133,7 @@ RDEPENDS_${PN}-dev = "${@['', '${PN} (>= ${PV})'][packaged(bb.data.getVar('PN', 
 
 FILES_${PN}-dbg = "${bindir}/.debug ${sbindir}/.debug ${libexecdir}/.debug ${libdir}/.debug \
             /bin/.debug /sbin/.debug /lib/.debug ${libdir}/${PN}/.debug \
-	    ${libdir}/matchbox-panel/.debug"
+            ${libdir}/matchbox-panel/.debug"
 SECTION_${PN}-dbg = "devel"
 ALLOW_EMPTY_${PN}-dbg = "1"
 RRECOMMENDS_${PN}-dbg = "${@['', '${PN} (>= ${PV})'][packaged(bb.data.getVar('PN', d, 1), d) == True]}"
@@ -184,6 +184,11 @@ DEPLOY_DIR_RPM = "${DEPLOY_DIR}/rpm"
 DEPLOY_DIR_DEB = "${DEPLOY_DIR}/deb"
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images"
 DEPLOY_DIR_TOOLS = "${DEPLOY_DIR}/tools"
+
+PKGDATA_DIR = "${STAGING_DIR}/pkgdata"
+
+SDK_NAME = "${DISTRO}/${TARGET_ARCH}"
+SDK_PREFIX = "/usr/local/${SDK_NAME}"
 
 ##################################################################
 # Kernel info.
@@ -378,6 +383,7 @@ UPDATECOMMAND_cvs = "/usr/bin/env cvs -d${CVSROOT} update -d -P ${CVSCOOPTS}"
 UPDATECOMMAND_svn = "/usr/bin/env svn update ${SVNCOOPTS}"
 SRCDATE = "${DATE}"
 SRCREV = "${@base_get_srcrev(d)}"
+AUTOREV = "${@bb.fetch.get_srcrev(d)}"
 
 SRC_URI = "file://${FILE}"
 
