--- a/conf/machine/fic-gta01.conf
+++ b/conf/machine/fic-gta01.conf
@@ -11,6 +11,10 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-openmoko"
 UBOOT_ENTRYPOINT = "30008000"
 
 MACHINE_FEATURES = "kernel26 apm alsa bluetooth usbgadget usbhost phone"
+MACHINE_DISPLAY_WIDTH_PIXELS = "480"
+MACHINE_DISPLAY_HEIGHT_PIXELS = "640"
+MACHINE_DISPLAY_ORIENTATION = "0"
+MACHINE_DISPLAY_PPI = "285"
 
 # package machine specific modules
 MACHINE_EXTRA_RRECOMMENDS = "\
