angstrom: make distroversion consistent between 2007.x and 2008.1

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -6,8 +6,8 @@
 #@MAINTAINER: Michael 'Mickey' Lauer <mickey@Vanille.de>
 #@--------------------------------------------------------------------
 
-#DISTRO_VERSION = "2007.4"
-DISTRO_VERSION = "test-${DATE}"
+#DISTRO_VERSION = "2007.9"
+DISTRO_VERSION = "2007.9-test-${DATE}"
 DISTRO_REVISION = "46"
 
 require conf/distro/include/sane-srcdates.inc
