--- a/conf/machine/akita.conf
+++ b/conf/machine/akita.conf
@@ -6,5 +6,6 @@ require conf/machine/include/zaurus-2.6.inc
 require conf/machine/include/zaurus-clamshell.inc
 
 PACKAGE_EXTRA_ARCHS += "iwmmxt" 
+IMAGE_FSTYPES ?= "jffs2"
 
 ROOT_FLASH_SIZE = "58"
