--- a/conf/machine/tosa.conf
+++ b/conf/machine/tosa.conf
@@ -4,6 +4,8 @@
 
 require conf/machine/include/zaurus-2.6.inc
 
+IMAGE_FSTYPES ?= "jffs2"
+
 # newer kernels does not build
 PREFERRED_VERSION_linux-rp = "2.6.17"
 
