--- a/conf/machine/hx2000.conf
+++ b/conf/machine/hx2000.conf
@@ -15,11 +15,11 @@ EXTRA_IMAGECMD_jffs2 = "; sumtool -i ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jf
 			  -o ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs-summary.jffs2 \
 			  -e 256KiB -p"
 
-IMAGE_FSTYPES ?= "jffs2"
+IMAGE_FSTYPES ?= "jffs2 tar.bz2"
 
 MODUTILS = "26"	
 
-MACHINE_FEATURES = "kernel26 touchscreen apm alsa pcmcia bluetooth irda wifi usbgadget screen"
+MACHINE_FEATURES = "kernel26 touchscreen apm alsa pcmcia bluetooth irda wifi usbgadget usbhost screen"
 
 PCMCIA_MANAGER = "pcmciautils"
 
@@ -44,3 +44,7 @@ module_autoload_pxa27x_udc = "pxa27x_udc"
 
 #FIXME: this should be controlled by a userspace utility later.
 module_autoload_g_ether = "g_ether"
+
+# Don't include kernels in standard images
+RDEPENDS_kernel-base = ""
+KERNEL_IMAGETYPE = "zImage"
