conf/machine/i586-generic.conf: Add pentium optimization for i586-generic machine

--- a/conf/machine/i586-generic.conf
+++ b/conf/machine/i586-generic.conf
@@ -24,3 +24,6 @@ MACHINE_EXTRA_RRECOMMENDS = " kernel-modules"
 MACHINE_TASK_PROVIDER = "task-base"
 
 
+#tune for pentium cpu
+require conf/machine/include/tune-pentium.conf
+
