conf/machine/i586-generic.conf : Rename the included tune file from .conf to .inc

--- a/conf/machine/i586-generic.conf
+++ b/conf/machine/i586-generic.conf
@@ -25,5 +25,5 @@ MACHINE_TASK_PROVIDER = "task-base"
 
 
 #tune for pentium cpu
-require conf/machine/include/tune-pentium.conf
+require conf/machine/include/tune-pentium.inc
 
