conf/machine/i686-generic.conf : Rename the included tune file from .conf to .inc

--- a/conf/machine/i686-generic.conf
+++ b/conf/machine/i686-generic.conf
@@ -23,5 +23,5 @@ MACHINE_EXTRA_RRECOMMENDS = " kernel-modules"
 MACHINE_TASK_PROVIDER = "task-base"
 
 #tune for pentium pro cpu
-require conf/machine/include/tune-pentiumpro.conf
+require conf/machine/include/tune-pentiumpro.inc
 
