nokia770: fix XSERVER

--- a/conf/machine/nokia770.conf
+++ b/conf/machine/nokia770.conf
@@ -8,7 +8,7 @@ PREFERRED_PROVIDER_virtual/xserver = "xserver-kdrive-omap"
 PREFERRED_PROVIDER_virtual/bootloader = ""
 PREFERRED_PROVIDER_tslib = "tslib-maemo"
 
-XSERVER = "xserver-kdrive-omap"
+XSERVER = "xserver-kdrive-xomap"
 
 # 800x480 is big enough for me
 GUI_MACHINE_CLASS = "bigscreen"
