angstrom 2008: switch to xorg 7.3

--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -6,6 +6,11 @@
 #@MAINTAINER: Michael 'Mickey' Lauer <mickey@Vanille-media.de>
 #@--------------------------------------------------------------------
 
+
+# Use Xorg R7.3 release
+require conf/distro/include/preferred-xorg-versions-X11R7.3.inc
+
+
 # This is a testbed for unstable and/or untested things, while angstrom-2007.1 
 # is aiming for stability and a release.
 # Use this at your own risk, we welcome bugreports filed at 
