angstrom 2007: include preferred-openmoko-versions

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -320,6 +320,7 @@ PREFERRED_VERSION_wpa-supplicant = "0.5.5"
 require conf/distro/include/preferred-gpe-versions-2.8.inc
 require conf/distro/include/preferred-e-versions.inc
 require conf/distro/include/preferred-xorg-versions.inc
+require conf/distro/include/preferred-openmoko-versions.inc
 
 
 # Virtuals:
