openmoko distro configurations: - remove openmoko.inc which is no longer in use - include preferred-openmoko-versions.inc - set preferred SRCREV for linux-openmoko

--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -29,3 +29,10 @@ FEED_URIS = "\
   updates-all##http://buildhost.openmoko.org/OM2007.2/tmp/deploy/glibc/ipk/all \
   updates-armv4t##http://buildhost.openmoko.org/OM2007.2/tmp/deploy/glibc/ipk/armv4t \
   updates-fic-gta01##http://buildhost.openmoko.org/OM2007.2/tmp/deploy/glibc/ipk/fic-gta01 "
+
+# 2.18 seems to break badly on 64-bit systems
+PREFERRED_VERSION_binutils ?= "2.17.50.0.12"
+PREFERRED_VERSION_binutils-cross ?= "2.17.50.0.12"
+
+require conf/distro/include/preferred-openmoko-versions.inc
+
