angstrom-2008.1.conf: use 2.6.21-hh16 version of handhelds.org kernel

--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -17,6 +17,9 @@ require conf/distro/include/preferred-xorg-versions-X11R7.3.inc
 #    http://bugs.openembedded.org
 # In doubt, use DISTRO="angstrom-2007.1"
 
+#Preferred version for the kernel on various machines
+PREFERRED_VERSION_linux-handhelds-2.6 ?= "2.6.21-hh16"
+
 require conf/distro/angstrom-2007.1.conf
 
 #DISTRO_VERSION = "2008.1"
