angstrom 2007.1: require sane-srcrevs.inc

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -11,6 +11,7 @@ DISTRO_VERSION = "2007.9-test-${DATE}"
 DISTRO_REVISION = "46"
 
 require conf/distro/include/sane-srcdates.inc
+require conf/distro/include/sane-srcrevs.inc
 
 #Images built can have to modes:
 # 'debug': empty rootpassword, strace and gdb included
