--- a/conf/bitbake.conf
+++ b/conf/bitbake.conf
@@ -389,7 +389,7 @@ UPDATECOMMAND = "ERROR, this must be a BitBake bug"
 UPDATECOMMAND_cvs = "/usr/bin/env cvs -d${CVSROOT} update -d -P ${CVSCOOPTS}"
 UPDATECOMMAND_svn = "/usr/bin/env svn update ${SVNCOOPTS}"
 SRCDATE = "${DATE}"
-SRCREV = "${@bb.fetch.get_srcrev(d)}"
+SRCREV = "1"
 AUTOREV = "${@bb.fetch.get_srcrev(d)}"
 
 SRC_URI = "file://${FILE}"
