--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -35,5 +35,7 @@ PREFERRED_VERSION_binutils ?= "2.17.50.0.12"
 PREFERRED_VERSION_binutils-cross ?= "2.17.50.0.12"
 
 require conf/distro/include/preferred-openmoko-versions.inc
-require conf/distro/include/moko-autorev.inc
+
+# Bleeding-edge developers should add the following line to their local.conf:
+# require conf/distro/include/moko-autorev.inc
 
