--- a/conf/machine/at32stk1000.conf
+++ b/conf/machine/at32stk1000.conf
@@ -21,5 +21,7 @@ ROOT_FLASH_SIZE = "8"
 EXTRA_IMAGECMD_jffs2 = " --big-endian --pagesize=4096 --eraseblock=65536"
 
 KERNEL_IMAGETYPE = "uImage"
-
 PREFERRED_VERSION_u-boot = "1.1.4"
+
+ROOTFS_POSTPROCESS_COMMAND += " rm ${IMAGE_ROOTFS}/boot/uImage* ;"
+
