alix: use tuning for GeodeLX cpu, switch to i586 According to Jordan Crouse (Geode maintainer in Linux) GeodeLX is i586 not i686. Also optimizations for AMD K6-2 are due to his suggestions. My ALIX.1c board runs with Geode optimized packages for over week without problems.

--- a/conf/machine/alix.conf
+++ b/conf/machine/alix.conf
@@ -5,9 +5,9 @@
 # http://pcengines.ch/alix1c.htm
 
 # i386 doesn't work with NTPL, see http://ecos.sourceware.org/ml/libc-ports/2006-03/msg00030.html
-TARGET_ARCH = "i686"
+TARGET_ARCH = "i586"
 
-PACKAGE_EXTRA_ARCHS = "x86 i386 i486 i586"
+PACKAGE_EXTRA_ARCHS = "x86 i386 i486 geode"
 PREFERRED_PROVIDER_virtual/kernel = "linux"
 PREFERRED_PROVIDER_virtual/xserver = "xserver-xorg"
 
@@ -16,6 +16,8 @@ GLIBC_ADDONS = "nptl"
 GLIBC_EXTRA_OECONF = "--with-tls"
 
 MACHINE_FEATURES = "kernel26 usbhost ext2 pci screen alsa acpi"
+
+require conf/machine/include/tune-geodelx.conf
 
 IMAGE_FSTYPES += "tar.gz"
 
