--- a/conf/machine/omap5912osk.conf
+++ b/conf/machine/omap5912osk.conf
@@ -25,5 +25,7 @@ MACHINE_EXTRA_RRECOMMENDS = "kernel-module-ide-cs \
                           kernel-module-nls-base \
                           kernel-module-vfat"
 
+RDEPENDS_kernel-base = ""
+
 require conf/machine/include/tune-arm926ejs.inc
 
