gumstix-verdex.conf : Prevent installation of uImage in /boot.

--- a/conf/machine/gumstix-verdex.conf
+++ b/conf/machine/gumstix-verdex.conf
@@ -1,5 +1,7 @@
 require conf/machine/include/gumstix.inc
 
+RDEPENDS_kernel-base = ""
+
 PACKAGE_EXTRA_ARCHS += " iwmmxt "
 
 MACHINE_FEATURES += " usbhost "
