--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -39,6 +39,6 @@ PREFERRED_VERSION_glibc-initial 	= "2.6.1"
 
 #Prefer a newer GTK+ and friends
 PREFERRED_VERSION_gtk+             	= "2.12.0"
-
+PREFERRED_VERSION_glib-2.0              = "2.14.0"
 
 
