--- a/conf/machine/fic-gta02.conf
+++ b/conf/machine/fic-gta02.conf
@@ -10,7 +10,7 @@ PACKAGE_EXTRA_ARCHS = "armv4t"
 PREFERRED_PROVIDER_virtual/kernel = "linux-openmoko"
 UBOOT_ENTRYPOINT = "30008000"
 
-MACHINE_FEATURES = "kernel26 apm alsa bluetooth usbgadget usbhost phone wifi"
+MACHINE_FEATURES = "kernel26 apm alsa bluetooth gps usbgadget usbhost phone wifi"
 MACHINE_DISPLAY_WIDTH_PIXELS = "480"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "640"
 MACHINE_DISPLAY_ORIENTATION = "0"
