angstrom 2008: prefer pango 1.18.x

--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -40,5 +40,5 @@ PREFERRED_VERSION_glibc-initial 	= "2.6.1"
 #Prefer a newer GTK+ and friends
 PREFERRED_VERSION_gtk+             	= "2.12.0"
 PREFERRED_VERSION_glib-2.0              = "2.14.0"
-
+PREFERRED_VERSION_pango                 = "1.18.1"
 
