--- a/packages/mplayer/files/makefile-nostrip-svn.patch
+++ b/packages/mplayer/files/makefile-nostrip-svn.patch
@@ -1,8 +1,8 @@
 Index: trunk/Makefile
 ===================================================================
---- trunk.orig/Makefile
-+++ trunk/Makefile
-@@ -264,7 +264,7 @@ install-dirs:
+--- trunk.orig/Makefile	2007-06-29 14:48:19.000000000 +0100
++++ trunk/Makefile	2007-06-29 14:48:43.000000000 +0100
+@@ -252,7 +252,7 @@
  	if test -f $(CONFDIR)/codecs.conf ; then mv -f $(CONFDIR)/codecs.conf $(CONFDIR)/codecs.conf.old ; fi
  
  install-mplayer: mplayer$(EXESUF)
@@ -11,7 +11,7 @@ Index: trunk/Makefile
  
  install-mplayer-man:
  	for i in $(MAN_LANG); do \
-@@ -277,7 +277,7 @@ install-mplayer-man:
+@@ -265,7 +265,7 @@
  	done
  
  install-mencoder: mencoder$(EXESUF)
@@ -20,12 +20,3 @@ Index: trunk/Makefile
  	for i in $(MAN_LANG); do \
  		if test "$$i" = en ; then \
  			cd $(MANDIR)/man1 && ln -sf mplayer.1 mencoder.1 ; \
-@@ -299,7 +299,7 @@ install-gui:
- install-vidix:
- 	$(MAKE) -C libdha install
- 	mkdir -p $(LIBDIR)/mplayer/vidix
--	$(INSTALL) -m 755 $(INSTALLSTRIP) -p vidix/drivers/*.so $(LIBDIR)/mplayer/vidix
-+	$(INSTALL) -m 755 -p vidix/drivers/*.so $(LIBDIR)/mplayer/vidix
- 
- uninstall:
- 	-rm -f $(BINDIR)/mplayer$(EXESUF) $(BINDIR)/gmplayer$(EXESUF)
