--- a/packages/linux/linux-ezx-2.6.21/patches/Makefile.OpenEZX
+++ b/packages/linux/linux-ezx-2.6.21/patches/Makefile.OpenEZX
@@ -8,12 +8,18 @@
 # in your environment.
 #
 
-PHONES = a780 e680 a1200 e2 e6
+PHONES = a780 e680 a1200 e6 e2
 
 CROSS_COMPILE ?= /home/wyrm/ezx/dev/cross/bin/arm-angstrom-linux-gnueabi-
 QUILT_PATCHES ?= patches
 
+LV ?= ezxdev	# replace LOCALVERSION string
+J ?= 2		# simultaneous jobs
+SIG ?= 0	# BOOL sign md5sums file
+
 DATE = $(shell date +%Y%m%d)
+DEPLOY_SERVER ?= people.openezx.org
+DEPLOY_DIR ?= public_html/images/$(DATE)/
 
 all: $(foreach p, $(PHONES), zImage-$(p) modules-$(p).tar.gz)
 
@@ -21,8 +27,27 @@ zImages: $(foreach p, $(PHONES), zImage-$(p))
 
 modules: $(foreach p, $(PHONES), modules-$(p).tar.gz)
 
+config: $(foreach p, $(PHONES), config-$(p))
+
+config-%: $(QUILT_PATCHES)/defconfig-%
+	cp $<  .config
+	make ARCH=arm oldconfig
+	cp .config $<
+
+deploy: release
+	ssh $(DEPLOY_SERVER) \
+		mkdir -p $(DEPLOY_DIR)
+	scp ezxrelease-$(DATE).tar $(DEPLOY_SERVER):$(DEPLOY_DIR)
+	ssh $(DEPLOY_SERVER) \
+		cd $(DEPLOY_DIR)\; \
+		tar -xf ezxrelease-$(DATE).tar\; \
+		rm -f ezxrelease-$(DATE).tar
+
 release: $(foreach p, $(PHONES), tag-$(p))
-	cat md5sums.tmp | gpg --clearsign > md5sums
+	cp md5sums.tmp md5sums
+	test "$(SIG)" = "1" && \
+		cat md5sums.tmp | gpg --clearsign > md5sums \
+	; echo
 	tar -rf ezxrelease.tar md5sums
 	rm -f md5sums.tmp md5sums
 	mv ezxrelease.tar ezxrelease-$(DATE).tar
@@ -30,22 +55,23 @@ release: $(foreach p, $(PHONES), tag-$(p))
 tag-%: zImage-% modules-%.tar.gz
 	p=$(patsubst tag-%,%,$@) && \
 	tag=$(shell cat include/config/kernel.release)-$(DATE) && \
-	cp zImage-$$p zImage-$$tag-$$p && \
-	cp modules-$$p.tar.gz modules-$$tag-$$p.tar.gz && \
+	mv zImage-$$p zImage-$$tag-$$p && \
+	mv modules-$$p.tar.gz modules-$$tag-$$p.tar.gz && \
 	tar -rf ezxrelease.tar zImage-$$tag-$$p modules-$$tag-$$p.tar.gz && \
 	md5sum zImage-$$tag-$$p modules-$$tag-$$p.tar.gz >> md5sums.tmp && \
 	rm -f zImage-$$tag-$$p modules-$$tag-$$p.tar.gz
 
 zImage-%: $(QUILT_PATCHES)/defconfig-%
-	cp $< ./.config
-	make ARCH=arm CROSS_COMPILE=$(CROSS_COMPILE) zImage
+	cat $< | sed 's/LOCALVERSION=".*"$$/LOCALVERSION="-$(LV)"/' > .config
+	make -j$(J) ARCH=arm CROSS_COMPILE=$(CROSS_COMPILE) zImage
 	mv arch/arm/boot/zImage $@
 
 modules-%.tar.gz: $(QUILT_PATCHES)/defconfig-%
-	cp $< ./.config
+	cat $< | sed 's/LOCALVERSION=".*"$$/LOCALVERSION="-$(LV)"/' > .config
 	-find . -name "*.ko" -print0 | xargs -r0 rm
-	mkdir /tmp/$@
-	make ARCH=arm CROSS_COMPILE=$(CROSS_COMPILE) \
-		INSTALL_MOD_PATH=/tmp/$@ modules modules_install
-	tar -C /tmp/$@ -czf $@ .
-	rm -rf /tmp/$@
+	mkdir -p Makefile.OpenEZX-tmp/$@
+	make -j$(J) ARCH=arm CROSS_COMPILE=$(CROSS_COMPILE) modules
+	make -j1 ARCH=arm CROSS_COMPILE=$(CROSS_COMPILE) \
+		INSTALL_MOD_PATH=Makefile.OpenEZX-tmp/$@ modules_install
+	tar -C Makefile.OpenEZX-tmp/$@ -czf $@ .
+	rm -rf Makefile.OpenEZX-tmp/
