--- a/conf/machine/compulab-pxa270.conf
+++ b/conf/machine/compulab-pxa270.conf
@@ -23,7 +23,7 @@ SERIAL_CONSOLE ?= "38400 ttyS1"
 ROOT_FLASH_SIZE ?= "32"
 
 # for NAND flash.
-EXTRA_IMAGECMD_jffs2 = "--little-endian --eraseblock=0x20000 --pad=0x20000 --no-cleanmarkers;\
+EXTRA_IMAGECMD_jffs2 = "--little-endian --eraseblock=0x20000 --pad --no-cleanmarkers;\
 	sumtool -i ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
 	-o ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs-summary.jffs2 \
 	-e 0x20000 -p; \
