compulab-pxa270-2.6.22: fix kernel command line, add support for W module

--- a/conf/machine/compulab-pxa270.conf
+++ b/conf/machine/compulab-pxa270.conf
@@ -11,13 +11,21 @@ PACKAGE_EXTRA_ARCHS = "armv4 armv5te"
 
 require conf/machine/include/tune-xscale.inc
 
+# console serial port.  If you have a L module
+# the below works.  If you have a W module, add
+# the following line to your local.conf:
+#   CMX270_CONSOLE_SERIAL_PORT = "ttyS0"
+
+# the following is for the cm-x270 L module
+CMX270_CONSOLE_SERIAL_PORT ?= "ttyS1"
+
 # used by sysvinit_2 package, so rebuild this
 # package if you change the SERIAL_CONSOLE setting
 # the following is the for the cm-x270 L module
 # I think the W module would use ttyS0, but has
 # not been tested.  This can be overwritten in 
 # local.conf
-SERIAL_CONSOLE ?= "38400 ttyS1"
+SERIAL_CONSOLE ?= "38400 ${CMX270_CONSOLE_SERIAL_PORT}"
 
 # used by opie-collections.inc
 ROOT_FLASH_SIZE ?= "32"
@@ -37,7 +45,7 @@ MACHINE_FEATURES = "kernel26 pcmcia usbhost usbgadget pcmcia touchscreen alsa"
 # to program the compulab NAND flash, the following scheme is suggested.  Create
 # a small rootfs that can fit in NOR flash using the following config:
 #   - Angstrom distro
-#   - uclibc
+#   - uclibc (set ANGSTROM_MODE = "uclibc" in local.conf)
 #   - angstrom-minimal-image-with-mtd-utils bitbake target
 #   - put the following in your local.conf
 #     - IMAGE_FSTYPES = "jffs2 tar cpio.gz"
