compulab-pxa270 2.6.22: add kernel cmdline for jffs2 rootfs note, this still works with the initramfs as well as the initramfs will always be mounted if present

--- a/conf/machine/compulab-pxa270.conf
+++ b/conf/machine/compulab-pxa270.conf
@@ -52,5 +52,8 @@ MACHINE_FEATURES = "kernel26 pcmcia usbhost usbgadget pcmcia touchscreen alsa"
 # now, when you build the image, a cpio.gz will be generated
 # that can be used as an initramfs.  You can boot into this image and then
 # program the main rootfs jffs2 image in NAND flash using mtd-utils
+# you can select booting the initramfs, or the main nand rootfs by using
+# the "ramdisk on", or "ramdisk off" commands in the bootloader
+#
 
 
