--- a/conf/machine/hx4700.conf
+++ b/conf/machine/hx4700.conf
@@ -20,6 +20,7 @@ MACHINE_GUI_CLASS = "bigscreen"
 MACHINE_DISPLAY_WIDTH_PIXELS = "480"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "640"
 MACHINE_FEATURES = "kernel26 touchscreen apm alsa pcmcia bluetooth irda wifi usbgadget screen"
+MACHINE_FEATURES += "iwmmxt"
 
 #
 # Software/packages selection
