--- a/conf/machine/palmld.conf
+++ b/conf/machine/palmld.conf
@@ -10,6 +10,7 @@ MACHINE_GUI_CLASS = "bigscreen"
 MACHINE_DISPLAY_WIDTH_PIXELS = "320"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "480"
 MACHINE_FEATURES += "pcmcia wifi"
+MACHINE_FEATURES += "iwmmxt"
 
 
 MACHINE_EXTRA_RRECOMMENDS += "\
