--- a/conf/machine/rokre2.conf
+++ b/conf/machine/rokre2.conf
@@ -6,3 +6,5 @@ require conf/machine/include/motorola-ezx-base.inc
 
 # there is no touchscreen
 MACHINE_FEATURES = "kernel26 apm alsa bluetooth usbgadget usbhost keyboard screen"
+MACHINE_FEATURES += "iwmmxt"
+
