--- a/conf/machine/magician.conf
+++ b/conf/machine/magician.conf
@@ -20,6 +20,8 @@ MACHINE_GUI_CLASS = "smallscreen"
 MACHINE_DISPLAY_WIDTH_PIXELS = "240"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
 MACHINE_FEATURES = "alsa apm bluetooth irda kernel26 phone screen touchscreen usbgadget usbhost"
+MACHINE_FEATURES += "iwmmxt"
+
 
 #
 # We don't support jffs2 installations (yet).
