--- a/conf/machine/er0100.conf
+++ b/conf/machine/er0100.conf
@@ -12,7 +12,7 @@ TARGET_ARCH = "arm"
 PACKAGE_EXTRA_ARCHS = "armv4 armv4t armv5te"
 
 # Use tune-xscale per default. Machine independent feeds should be built with tune-strongarm.
-require conf/machine/include/tune-xscale.conf
+require conf/machine/include/tune-xscale.inc
 
 # Fix us:
 
