distro/angstrom-2008.1.conf : update to udev 115 for speed and fun

--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -8,7 +8,7 @@
 
 
 # Use Xorg R7.3 release
-require conf/distro/include/preferred-xorg-versions-X11R7.3.inc
+require conf/distro/include/preferred-xorg-versions-X11R7.2.inc
 
 
 # This is a testbed for unstable and/or untested things, while angstrom-2007.1 
@@ -41,4 +41,7 @@ PREFERRED_VERSION_glibc-initial 	= "2.6.1"
 PREFERRED_VERSION_gtk+             	= "2.12.0"
 PREFERRED_VERSION_glib-2.0              = "2.14.0"
 PREFERRED_VERSION_pango                 = "1.18.1"
+
+# prefer newest for speed and fun
+PREFERRED_VERSION_udev			= "115"
 
