rename compulab-pxa270 machine to cm-x270

--- a/conf/machine/cm-x270.conf
+++ b/conf/machine/cm-x270.conf
@@ -1,12 +1,12 @@
 #@TYPE: Machine
-#@Name: Compulab PXA270 system
-#@DESCRIPTION: Machine configuration for Compulab PXA270 system
+#@Name: Compulab cm-x270
+#@DESCRIPTION: Machine configuration for Compulab cm-x270 computer module
 #OLDEST_KERNEL = "2.6.16"
 TARGET_ARCH = "arm"
 PREFERRED_VERSION_compulab-pxa270 = "2.6.22"
 GUI_MACHINE_CLASS ?= "bigscreen"
 
-PREFERRED_PROVIDER_virtual/kernel = "${MACHINE}"
+PREFERRED_PROVIDER_virtual/kernel = "compulab-pxa270"
 PACKAGE_EXTRA_ARCHS = "armv4 armv5te"
 
 require conf/machine/include/tune-xscale.inc
@@ -21,7 +21,7 @@ CMX270_CONSOLE_SERIAL_PORT ?= "ttyS1"
 
 # used by sysvinit_2 package, so rebuild this
 # package if you change the SERIAL_CONSOLE setting
-# the following is the for the cm-x270 L module
+# the following is the port for the cm-x270 L module
 # I think the W module would use ttyS0, but has
 # not been tested.  This can be overwritten in 
 # local.conf
