x86 machines: added 'x86' MACHINE_FEATURE to limit amount of overrides needed when package need x86 special options - look at mplayer as example

--- a/conf/machine/netvista.conf
+++ b/conf/machine/netvista.conf
@@ -15,7 +15,7 @@ KERNEL_IMAGETYPE = "bzImage"
 # BOOTSTRAP_EXTRA_RDEPENDS = "kernel pciutils udev kernel-modules"
 MACHINE_EXTRA_RRECOMMENDS = " kernel-modules"
 
-MACHINE_FEATURES = "kernel26 pci usbhost ext2 screen keyboard irda apm alsa"
+MACHINE_FEATURES = "kernel26 pci usbhost ext2 screen keyboard irda apm alsa x86"
 ROOT_FLASH_SIZE = "64"
 GUI_MACHINE_CLASS = "bigscreen"
 
