--- a/conf/machine/wrap.conf
+++ b/conf/machine/wrap.conf
@@ -22,7 +22,7 @@ USE_DEVFS = "0"
 IMAGE_FSTYPE ?= "tar.gz"
 
 # Things to include in the fs image
-MACHINE_FEATURES = "kernel26 pci ext2"
+MACHINE_FEATURES = "kernel26 pci ext2 x86"
 # The kernel and grub need to installed to boot from flash
 MACHINE_EXTRA_RDEPENDS = "kernel grub"
 
