--- a/conf/machine/x86.conf
+++ b/conf/machine/x86.conf
@@ -13,7 +13,7 @@ KERNEL_IMAGETYPE = "bzImage"
 # BOOTSTRAP_EXTRA_RDEPENDS = "kernel pciutils udev kernel-modules"
 MACHINE_EXTRA_RRECOMMENDS = " kernel-modules"
 
-MACHINE_FEATURES = "kernel26 pci usbhost ext2 screen"
+MACHINE_FEATURES = "kernel26 pci usbhost ext2 screen x86"
 
 udevdir = "/dev"
 OLDEST_KERNEL = "2.6.17"
