--- a/conf/machine/epia.conf
+++ b/conf/machine/epia.conf
@@ -12,7 +12,7 @@ GLIBC_EXTRA_OECONF = "--with-tls"
 
 IMAGE_FSTYPES = "ext2.gz"
 
-MACHINE_FEATURES = "kernel26 screen keyboard pci ushbost acpi ext2"
+MACHINE_FEATURES = "kernel26 screen keyboard pci ushbost acpi ext2 x86"
 MACHINE_TASK_PROVIDER = "task-base"
 
 require conf/machine/include/tune-c3.inc
