--- a/conf/machine/progear.conf
+++ b/conf/machine/progear.conf
@@ -15,7 +15,7 @@ OLDEST_KERNEL = "2.6.17"
 GLIBC_ADDONS = "nptl"
 GLIBC_EXTRA_OECONF = "--with-tls"
 
-MACHINE_FEATURES = "kernel26 usbhost ext2 pci pcmcia screen alsa irda acpi screen touchscreen"
+MACHINE_FEATURES = "kernel26 usbhost ext2 pci pcmcia screen alsa irda acpi screen touchscreen x86"
 
 IMAGE_FSTYPES = "tar.gz"
 
