cm-x270: change kernel provider to linux

--- a/conf/machine/cm-x270.conf
+++ b/conf/machine/cm-x270.conf
@@ -6,7 +6,7 @@ TARGET_ARCH = "arm"
 PREFERRED_VERSION_compulab-pxa270 = "2.6.22"
 GUI_MACHINE_CLASS ?= "bigscreen"
 
-PREFERRED_PROVIDER_virtual/kernel = "compulab-pxa270"
+PREFERRED_PROVIDER_virtual/kernel = "linux"
 PACKAGE_EXTRA_ARCHS = "armv4 armv5te"
 
 require conf/machine/include/tune-xscale.inc
