--- a/conf/machine/cm-x270.conf
+++ b/conf/machine/cm-x270.conf
@@ -3,10 +3,11 @@
 #@DESCRIPTION: Machine configuration for Compulab cm-x270 computer module
 #OLDEST_KERNEL = "2.6.16"
 TARGET_ARCH = "arm"
-PREFERRED_VERSION_compulab-pxa270 = "2.6.22"
 GUI_MACHINE_CLASS ?= "bigscreen"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux"
+PREFERRED_VERSION_linux = "2.6.22"
+
 PACKAGE_EXTRA_ARCHS = "armv4 armv5te"
 
 require conf/machine/include/tune-xscale.inc
