cm-x270: added iwmmxt into archs and features

--- a/conf/machine/cm-x270.conf
+++ b/conf/machine/cm-x270.conf
@@ -8,7 +8,7 @@ GUI_MACHINE_CLASS ?= "bigscreen"
 PREFERRED_PROVIDER_virtual/kernel = "linux"
 PREFERRED_VERSION_linux = "2.6.22"
 
-PACKAGE_EXTRA_ARCHS = "armv4 armv5te"
+PACKAGE_EXTRA_ARCHS = "armv4 armv4t armv5te iwmmxt"
 
 require conf/machine/include/tune-xscale.inc
 
@@ -41,7 +41,7 @@ EXTRA_IMAGECMD_jffs2 = "--little-endian --eraseblock=0x20000 --pad --no-cleanmar
 	ln -s ${IMAGE_NAME}.rootfs-summary.jffs2 ${IMAGE_LINK_NAME}.rootfs-summary.jffs2 \
 	"
 
-MACHINE_FEATURES = "kernel26 pcmcia usbhost usbgadget pcmcia touchscreen alsa"
+MACHINE_FEATURES = "kernel26 pcmcia usbhost usbgadget pcmcia touchscreen alsa iwmmxt"
 
 # to program the compulab NAND flash, the following scheme is suggested.  Create
 # a small rootfs that can fit in NOR flash using the following config:
