--- a/conf/machine/alix.conf
+++ b/conf/machine/alix.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
 #@NAME: Alix
-#@DESCRIPTION: Machine configuration for PC Engines Alix1c board
+#@DESCRIPTION: Machine.inciguration for PC Engines Alix1c board
 #
 # http://pcengines.ch/alix1c.htm
 
@@ -17,7 +17,7 @@ GLIBC_EXTRA_OECONF = "--with-tls"
 
 MACHINE_FEATURES = "kernel26 usbhost ext2 pci screen alsa acpi x86"
 
-require conf/machine/include/tune-geodelx.conf
+require.inc/machine/include/tune-geodelx.inc
 
 IMAGE_FSTYPES += "tar.gz"
 
