--- a/conf/machine/at91sam9261ek.conf
+++ b/conf/machine/at91sam9261ek.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
 #@Name: Atmel AT91SAM9261EK Development Platform
-#@DESCRIPTION: Machine configuration for the at91sam9261ek development board with a at91sam9261 processor
+#@DESCRIPTION: Machine.inciguration for the at91sam9261ek development board with a at91sam9261 processor
 
 TARGET_ARCH = "arm"
 PACKAGE_EXTRA_ARCHS = "armv4t armv5te"
@@ -17,4 +17,4 @@ MACHINE_FEATURES = "kernel26 alsa ext2 usbhost usbgadget screen touchscreen"
 SERIAL_CONSOLE = "115200 ttyS0"
 EXTRA_IMAGECMD_jffs2 = "--pad --little-endian --eraseblock=0x20000 -n"
 
-require conf/machine/include/tune-arm926ejs.conf
+require.inc/machine/include/tune-arm926ejs.inc
