--- a/conf/machine/at91sam9261ek.conf
+++ b/conf/machine/at91sam9261ek.conf
@@ -8,6 +8,8 @@ PACKAGE_EXTRA_ARCHS = "armv4t armv5te"
 PREFERRED_PROVIDER_virtual/kernel = "linux"
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 
+KERNEL_IMAGETYPE = "uImage"
+
 #don't try to access tty1
 USE_VT = "0"
 
