--- a/conf/machine/fic-gta02.conf
+++ b/conf/machine/fic-gta02.conf
@@ -44,3 +44,6 @@ EXTRA_IMAGEDEPENDS += "sjf2410-linux-native dfu-util-native"
 
 # tune for S3C24x0
 include conf/machine/include/tune-arm920t.inc
+
+# build YAFFS2
+IMAGE_FSTYPES =+ "yaffs2"
