--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -45,3 +45,6 @@ PREFERRED_VERSION_pango                 = "1.18.1"
 # prefer newest for speed and fun
 PREFERRED_VERSION_udev			= "115"
 
+# Our patched-to-hell busybox 1.2.1 is getting old and unmaintanable
+PREFERRED_VERSION_busybox               = "1.7.2" 
+
