bd-neon.conf: Use regular linux 2.6.22 recipe.

--- a/conf/machine/bd-neon.conf
+++ b/conf/machine/bd-neon.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
 #@NAME: Boundary Devices NEON
-#@DESCRIPTION: Machine.inciguration for the Boundary Devices NEON board
+#@DESCRIPTION: Machine configuration for the Boundary Devices NEON board
 
 #
 # Hardware-based properties
@@ -9,10 +9,10 @@ TARGET_ARCH = "arm"
 PACKAGE_EXTRA_ARCHS = "armv4 armv4t armv5te"
 
 # Use tune-xscale per default. Machine independent feeds should be built with tune-strongarm.
-require.inc/machine/include/tune-xscale.inc
+require conf/machine/include/tune-xscale.inc
 
 # Uncomment this to use iwmmxt optimizations. Remove the above xscale stuff first
-#require.inc/machine/include/tune-iwmmxt.inc
+#require conf/machine/include/tune-iwmmxt.inc
 
 ROOT_FLASH_SIZE = "60"
 VOLATILE_STORAGE_SIZE = "128"
@@ -22,7 +22,9 @@ MACHINE_FEATURES = "kernel26 touchscreen apm alsa usbgadget screen uboot"
 #
 # Software/packages selection
 #
-PREFERRED_PROVIDER_virtual/kernel = "linux-bd-neon-2.6"
+PREFERRED_PROVIDER_virtual/kernel = "linux"
+PERFERRED_VERSION_linux = "2.6.22"
+
 MODUTILS = "26"	
 XSERVER = "xserver-kdrive-fbdev"
 MACHINE_TASK_PROVIDER = "task-base"
