at91sam92*: fix require lines

--- a/conf/machine/at91sam9260ek.conf
+++ b/conf/machine/at91sam9260ek.conf
@@ -19,4 +19,4 @@ MACHINE_FEATURES = "kernel26 alsa ext2 usbhost usbgadget"
 SERIAL_CONSOLE = "115200 ttyS0"
 EXTRA_IMAGECMD_jffs2 = "--pad --little-endian --eraseblock=0x20000 -n"
 
-require.inc/machine/include/tune-arm926ejs.inc
+require conf/machine/include/tune-arm926ejs.inc
