distro/openmoko.conf : make gta01/02 equivalent machines for packages where the resulting packages are in fact identical.

--- a/conf/machine/fic-gta01.conf
+++ b/conf/machine/fic-gta01.conf
@@ -5,7 +5,8 @@
 #-----------------------------------------------------------------------------
 
 TARGET_ARCH = "arm"
-PACKAGE_EXTRA_ARCHS = "armv4t"
+MACHINE_CLASS = "neo1973"
+PACKAGE_EXTRA_ARCHS = "armv4t ${MACHINE_CLASS}"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-openmoko"
 UBOOT_ENTRYPOINT = "30008000"
