--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -39,3 +39,31 @@ require conf/distro/include/preferred-openmoko-versions.inc
 # Bleeding-edge developers should add the following line to their local.conf:
 # require conf/distro/include/moko-autorev.inc
 
+# override the PACKAGE_ARCH of certain packages for openmoko distro
+#
+# Same kernel runs on both these machines
+PACKAGE_ARCH_pn-linux-openmoko_fic-gta01 = "${MACHINE_CLASS}"
+PACKAGE_ARCH_pn-linux-openmoko_fic-gta02 = "${MACHINE_CLASS}"
+# Same touchscreen on both these machines
+PACKAGE_ARCH_pn-pointercal_fic-gta01 = "${MACHINE_CLASS}"
+PACKAGE_ARCH_pn-pointercal_fic-gta02 = "${MACHINE_CLASS}"
+SRC_URI_OVERRIDES_PACKAGE_ARCH_pn-pointercal_fic-gta01 = "0"
+SRC_URI_OVERRIDES_PACKAGE_ARCH_pn-pointercal_fic-gta02 = "0"
+# Same kernel so same usb
+PACKAGE_ARCH_pn-usb-gadget-mode_fic-gta01 = "${MACHINE_CLASS}"
+PACKAGE_ARCH_pn-usb-gadget-mode_fic-gta02 = "${MACHINE_CLASS}"
+# same kernel so same keymaps
+PACKAGE_ARCH_pn-keymaps_fic-gta01 = "${MACHINE_CLASS}"
+PACKAGE_ARCH_pn-keymaps_fic-gta02 = "${MACHINE_CLASS}"
+# neod knows about both machines
+PACKAGE_ARCH_pn-neod_fic-gta01 = "${MACHINE_CLASS}"
+PACKAGE_ARCH_pn-neod_fic-gta02 = "${MACHINE_CLASS}"
+
+# Select packge versions we wash to use.
+PREFERRED_PROVIDER_gtk+ = "gtk+-fastscaling"
+PREFERRED_VERSION_gtk+-fastscaling = "2.10.14"
+
+# deploy gta01 and gta02 in ${MACHINE_CLASS} directory
+DEPLOY_DIR_IMAGE_fic-gta01 = "${DEPLOY_DIR}/images/${MACHINE_CLASS}"
+DEPLOY_DIR_IMAGE_fic-gta02 = "${DEPLOY_DIR}/images/${MACHINE_CLASS}"
+
