--- a/conf/machine/fic-gta02.conf
+++ b/conf/machine/fic-gta02.conf
@@ -5,7 +5,8 @@
 #-----------------------------------------------------------------------------
 
 TARGET_ARCH = "arm"
-PACKAGE_EXTRA_ARCHS = "armv4t"
+MACHINE_CLASS = "neo1973"
+PACKAGE_EXTRA_ARCHS = "armv4t ${MACHINE_CLASS}"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-openmoko"
 UBOOT_ENTRYPOINT = "30008000"
@@ -46,4 +47,4 @@ EXTRA_IMAGEDEPENDS += "sjf2410-linux-native dfu-util-native"
 include conf/machine/include/tune-arm920t.inc
 
 # build YAFFS2
-IMAGE_FSTYPES =+ "yaffs2"
+IMAGE_FSTYPES ?= "jffs2 yaffs2"
