blackfin machine: use linux-bfin

--- a/conf/machine/adsp-bf537-stamp.conf
+++ b/conf/machine/adsp-bf537-stamp.conf
@@ -5,7 +5,7 @@
 
 TARGET_ARCH = "bfin"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux"
+PREFERRED_PROVIDER_virtual/kernel = "linux-bfin"
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 
 #don't try to access tty1
