--- a/conf/machine/adzs-bf538f-ezlite.conf
+++ b/conf/machine/adzs-bf538f-ezlite.conf
@@ -2,10 +2,9 @@
 #@Name: Analog Devices blackfin platfrom
 #@DESCRIPTION: ADSP-BF538(F) EZ-KIT Board (http://www.analog.com/en/epHSProd/0,,BF538-HARDWARE,00.html)
 
-
 TARGET_ARCH = "bfin"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux"
+PREFERRED_PROVIDER_virtual/kernel = "linux-bfin"
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 
 #don't try to access tty1
