--- a/conf/machine/adzs-bf548-ezlite.conf
+++ b/conf/machine/adzs-bf548-ezlite.conf
@@ -2,10 +2,11 @@
 #@Name: Analog Devices blackfin platfrom
 #@DESCRIPTION: ADSP-BF548 EZ-LITE KIT Board (http://www.analog.com/en/epHSProd/0,,BF548-HARDWARE,00.html)
 
-
 TARGET_ARCH = "bfin"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux"
+KERNEL_IMAGETYPE = "vmlinux"
+
+PREFERRED_PROVIDER_virtual/kernel = "linux-bfin"
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 
 #don't try to access tty1
