conf/distro/openmoko.conf: Fix regex for the https case

--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -19,7 +19,7 @@ OVERRIDES = "local:${MACHINE}:${DISTRO}:angstrom:${TARGET_OS}:${TARGET_ARCH}:bui
 
 CVS_TARBALL_STASH = "http://downloads.openmoko.org/sources/"
 
-PREMIRRORS = "(ftp|http)://.*/.*/ http://downloads.openmoko.org/sources/"
+PREMIRRORS = "(ftp|https?)$://.*/.*/ http://downloads.openmoko.org/sources/"
 
 FEED_URIS = "\
   snapshot-all##http://buildhost.openmoko.org/snapshots/2007.08/ipk/all \
