magician.conf: use xserver-kdrive as virtual/xserver, add display info

--- a/conf/machine/magician.conf
+++ b/conf/machine/magician.conf
@@ -14,11 +14,13 @@ require conf/machine/include/tune-xscale.inc
 # Uncomment this to use iwmmxt optimizations. Remove the above xscale stuff first
 #require conf/machine/include/tune-iwmmxt.inc
 
-ROOT_FLASH_SIZE = "80"
+ROOT_FLASH_SIZE = "60"
 VOLATILE_STORAGE_SIZE = "64"
 MACHINE_GUI_CLASS = "smallscreen"
 MACHINE_DISPLAY_WIDTH_PIXELS = "240"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
+MACHINE_DISPLAY_ORIENTATION = "0"
+MACHINE_DISPLAY_PPI = "142"
 MACHINE_FEATURES = "alsa apm bluetooth irda kernel26 phone screen touchscreen usbgadget usbhost"
 MACHINE_FEATURES += "iwmmxt"
 
@@ -34,6 +36,7 @@ IMAGE_FSTYPES = "tar.bz2"
 PREFERRED_PROVIDER_virtual/kernel = "linux-handhelds-2.6"
 MODUTILS = "26"	
 XSERVER = "xserver-kdrive-fbdev"
+PREFERRED_PROVIDER_virtual/xserver = "xserver-kdrive"
 
 PREFERRED_VERSION_orinoco-modules = "0.15rc1"
 
