em-x270.conf: fix include file names

--- a/conf/machine/em-x270.conf
+++ b/conf/machine/em-x270.conf
@@ -12,11 +12,12 @@ PACKAGE_EXTRA_ARCHS = "armv4 armv4t armv5te iwmmxt  "
 PREFERRED_PROVIDER_virtual/kernel = "${MACHINE}"
 
 # Use tune-xscale per default. Machine independent feeds should be built with tune-strongarm.
-#require conf/machine/include/tune-xscale.conf
+#require conf/machine/include/tune-xscale.inc
 
 # Uncomment this to use iwmmxt optimizations. Remove the above xscale stuff first
-# require conf/machine/include/tune-iwmmxt.conf
-require conf/machine/include/tune-xscale.conf
+# require conf/machine/include/tune-iwmmxt.inc
+
+require conf/machine/include/tune-xscale.inc
 
 ROOT_FLASH_SIZE = "128"
 IMAGE_CMD_jffs2 = " \
