--- a/conf/bitbake.conf
+++ b/conf/bitbake.conf
@@ -485,7 +485,8 @@ require conf/sanity.conf
 DL_DIR ?= "${TMPDIR}/downloads"
 IMAGE_FSTYPES ?= "jffs2"
 PCMCIA_MANAGER ?= "pcmcia-cs"
-MACHINE_TASK_PROVIDER ?= "task-base"
+DEFAULT_TASK_PROVIDER ?= "task-base"
+MACHINE_TASK_PROVIDER ?= "${DEFAULT_TASK_PROVIDER}"
 IMAGE_ROOTFS_SIZE_ext2 ?= "65536"
 IMAGE_ROOTFS_SIZE_ext2.gz ?= "65536"
 IMAGE_ROOTFS_SIZE_ext3 ?= "65536"
