efika: Trivial typo fix.

--- a/conf/machine/efika.conf
+++ b/conf/machine/efika.conf
@@ -1,10 +1,9 @@
 #@TYPE: Machine
 #@Name: Genisi EFIKA Development Platform
-#@DESCRIPTION: Machine configuration for teh EFIKA development platform: http://www.pegasosppc.com/efika.php
-
+#@DESCRIPTION: Machine configuration for the EFIKA development platform: http://www.pegasosppc.com/efika.php
 
 TARGET_ARCH = "powerpc"
-PACKAGE_EXTRA_ARCHS = "all  ${MACHINE} ppc ppc603e"
+PACKAGE_EXTRA_ARCHS = "all ${MACHINE} ppc ppc603e"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-${MACHINE}"
 
