--- a/conf/machine/mpc8313e-rdb.conf
+++ b/conf/machine/mpc8313e-rdb.conf
@@ -3,7 +3,7 @@
 #@DESCRIPTION: Machine configuration for the Freescale MPC8313E-RDB
 
 TARGET_ARCH = "powerpc"
-PACKAGE_EXTRA_ARCHS = "all ${MACHINE} ppc ppc603e"
+PACKAGE_EXTRA_ARCHS = "all ${MACHINE} ppc ppce300c3"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-${MACHINE}"
 
@@ -12,7 +12,7 @@ MACHINE_FEATURES = "kernel26 usbhost ext2"
 #don't try to access tty1
 USE_VT = "0"
 
-SERIAL_CONSOLE = "115200 ttyPSC0"
+SERIAL_CONSOLE = "115200 ttyS0"
 
 #tune for the e300c3 core
 require conf/machine/include/tune-ppce300c3.inc
