angstrom 2007: activate lock down file, nobody has complained about errors in the file for the past week, or objected to using it.

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -386,6 +386,10 @@ PREFERRED_PROVIDER_gdk-pixbuf-loader-xpm  ?= "gtk+"
 #Silence a warning during parsing
 PREFERRED_PROVIDER_task-bootstrap = "task-bootstrap"
 
+
+# Lock down almost every recipe:
+require conf/distro/include/angstrom-2007-preferred-versions.inc 
+
 #This is needed to get a correct PACKAGE_ARCH for packages that have PACKAGE_ARCH = ${MACHINE_ARCH}
 ARM_ABI ?= "${@['','oabi'][bb.data.getVar('MACHINE',d) in ['collie','h3600', 'h3800', 'simpad', 'htcwallaby']]}"
 require conf/distro/include/angstrom${ARM_ABI}.inc
