mpc8313e-rdb: Added support to build u-boot.

--- a/conf/machine/mpc8313e-rdb.conf
+++ b/conf/machine/mpc8313e-rdb.conf
@@ -9,6 +9,8 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-${MACHINE}"
 
 MACHINE_FEATURES = "kernel26 usbhost ext2"
 
+UBOOT_MACHINE = "MPC8313ERDB_33_config"
+
 #don't try to access tty1
 USE_VT = "0"
 
