--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -47,4 +47,15 @@ PREFERRED_VERSION_udev			= "115"
 
 # Our patched-to-hell busybox 1.2.1 is getting old and unmaintanable
 PREFERRED_VERSION_busybox               = "1.7.2" 
-
+PREFERRED_VERSION_pango                 = "1.18.1"
+#avr32 only has patches for binutils 2.17 and gcc 4.1.2 in OE
+PREFERRED_VERSION_gcc_avr32               = "4.1.2"
+PREFERRED_VERSION_gcc-cross_avr32         = "4.1.2"
+PREFERRED_VERSION_gcc-cross-sdk_avr32     = "4.1.2"
+PREFERRED_VERSION_gcc-cross-initial_avr32 = "4.1.2"
+PREFERRED_VERSION_binutils_avr32 = "2.17"
+PREFERRED_VERSION_binutils-cross_avr32 = "2.17"
+PREFERRED_VERSION_binutils-cross-sdk_avr32 = "2.17"
+#there's is no avr32 patch for 0.9.29
+PREFERRED_VERSION_uclibc_avr32 = "0.9.28"
+PREFERRED_VERSION_uclibc-initial_avr32 = "0.9.28"
