angstrom-2007.1.conf: add workaround for missing mtd-utils-native

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -406,6 +406,12 @@ EXTRA_STUFF ?= ""
 
 # Angstrom want to ship some extra stuff. This should be moved into task-base eventually
 # contains ipkg specific stuff as well :(
+
+#work around a bitbake bug where mtd-utils-native isn't created so do_rootfs fails 
+DISTRO_EXTRA_DEPENDS += " \
+    mtd-utils-native \
+    "    
+
 DISTRO_EXTRA_RDEPENDS += "\
     update-modules \
     ${@base_contains("MACHINE_FEATURES", "screen", "psplash", "",d)} \   
