angstrom-2008.1.conf: use preferred versions includes (e, gpe2.8, openmoko) * in some cases these preferred versions upgrade, not downgrade packages   due to DEFAULT_PREFERENCE settings (for example libmimedir in gpe2.8)

--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -88,8 +88,12 @@ PREFERRED_PROVIDER_avahi = "avahi"
 PREFERRED_PROVIDER_virtual/xserver  ?= "xserver-kdrive"
 PREFERRED_PROVIDER_xserver          ?= "xserver-kdrive"
 
-# Use Xorg R7.3 release
+#Loads preferred versions from files, these have weak assigments (?=), so put them at the bottom
+require conf/distro/include/preferred-gpe-versions-2.8.inc
+require conf/distro/include/preferred-e-versions.inc
 require conf/distro/include/preferred-xorg-versions-X11R7.3.inc
+require conf/distro/include/preferred-openmoko-versions.inc
+
 
 # Virtuals:
 PREFERRED_PROVIDER_virtual/${TARGET_PREFIX}gcc-initial = "gcc-cross-initial"
