--- a/conf/machine/x86.conf
+++ b/conf/machine/x86.conf
@@ -9,6 +9,8 @@ TARGET_ARCH = "i486"
 PACKAGE_EXTRA_ARCHS = "x86"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux"
+PREFERRED_PROVIDER_virtual/xserver = "xserver-kdrive"
+XSERVER="xserver-kdrive-vesa"
 
 KERNEL_IMAGETYPE = "bzImage"
 
