--- a/conf/machine/i586-generic.conf
+++ b/conf/machine/i586-generic.conf
@@ -10,7 +10,8 @@ PACKAGE_EXTRA_ARCHS = "x86 i386 i486"
 
 
 PREFERRED_PROVIDER_virtual/kernel = "linux"
-
+PREFERRED_PROVIDER_virtual/xserver = "xserver-kdrive"
+XSERVER="xserver-kdrive-vesa"
 
 KERNEL_IMAGETYPE = "bzImage"
 
