--- a/conf/machine/i686-generic.conf
+++ b/conf/machine/i686-generic.conf
@@ -9,6 +9,8 @@ TARGET_ARCH = "i686"
 PACKAGE_EXTRA_ARCHS = "x86 i386 i486 i586"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux"
+PREFERRED_PROVIDER_virtual/xserver = "xserver-kdrive"
+XSERVER="xserver-kdrive-vesa"
 
 KERNEL_IMAGETYPE = "bzImage"
 
