bitbake.conf: Add -pn bit to alternative OVERRIDES definition and update descriptions.

--- a/conf/bitbake.conf
+++ b/conf/bitbake.conf
@@ -460,9 +460,10 @@ AUTO_LIBNAME_PKGS = "${PACKAGES}"
 # when ${MACHINE} is 'ramses'. And finally '<foo>_local' overrides anything.
 #
 # This works for  functions as well, they are really just environment variables.
-#OVERRIDES = "local:${MACHINE}:${DISTRO}:${TARGET_OS}:${TARGET_ARCH}:build-${BUILD_OS}"
-# Alternative OVERRIDES to make compilation fail fast, we will enable it by default soon
+# Default OVERRIDES to make compilation fail fast in case of build system misconfiguration.
 OVERRIDES = "local:${MACHINE}:${DISTRO}:${TARGET_OS}:${TARGET_ARCH}:build-${BUILD_OS}:fail-fast:pn-${PN}"
+# Alternative OVERRIDES definition without "fail fast", usually only for native building and Scratchbox toolchains.
+#OVERRIDES = "local:${MACHINE}:${DISTRO}:${TARGET_OS}:${TARGET_ARCH}:build-${BUILD_OS}:pn-${PN}"
 
 ##################################################################
 # Include the rest of the config files.
