conf/machine/dht-walnut.conf : Set soft-float for the machine as its uses amcc405

--- a/conf/machine/dht-walnut.conf
+++ b/conf/machine/dht-walnut.conf
@@ -13,7 +13,7 @@ UBOOT_ENTRYPOINT = "0"
 MACHINE_FEATURES = "kernel26 ext2"
 
 TARGET_CPU = "405"
-OLDEST_KERNEL = "2.6.18"
+TARGET_FPU    =  "soft"
 
 #don't try to access tty1
 USE_VT = "0"
