bd-neon.conf: Add missing uboot bits

--- a/conf/machine/bd-neon.conf
+++ b/conf/machine/bd-neon.conf
@@ -24,6 +24,8 @@ MACHINE_FEATURES = "kernel26 touchscreen apm alsa usbgadget screen uboot"
 #
 PREFERRED_PROVIDER_virtual/kernel = "linux"
 PERFERRED_VERSION_linux = "2.6.22"
+KERNEL_IMAGETYPE = "uImage"
+UBOOT_ENTRYPOINT = "a0008000"
 
 MODUTILS = "26"	
 XSERVER = "xserver-kdrive-fbdev"
