conf/distro/angstrom-2007.1.conf : avahi and openssh-sftp-server as RRECOMENDS so people can ignore them

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -252,8 +252,6 @@ DISTRO_EXTRA_RDEPENDS += "\
     angstrom-version \
     ipkg ipkg-collateral \
     util-linux-mount util-linux-umount \
-    avahi-daemon \
-    avahi-autoipd \
     ${EXTRA_STUFF} \
     ${DEBUG_APPS} \
     "
@@ -262,4 +260,7 @@ DISTRO_EXTRA_RRECOMMENDS += " \
     kernel-module-vfat \
     kernel-module-ext2 \
     kernel-module-af-packet \
+    avahi-daemon \
+    avahi-autoipd \
+    openssh-sftp-server \
     "
