openmoko.conf : prefer libgsmd

--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -34,6 +34,9 @@ FEED_URIS = "\
 PREFERRED_VERSION_binutils ?= "2.17.50.0.12"
 PREFERRED_VERSION_binutils-cross ?= "2.17.50.0.12"
 
+# we want the openmoko svn version of gsmd
+PREFERRED_PROVIDER_libgsmd = "libgsmd"
+
 require conf/distro/include/preferred-openmoko-versions.inc
 
 # Bleeding-edge developers should add the following line to their local.conf:
