conf/machine/dht-walnut.conf : Remove TARGET_FPU as its now included in the tune-ppc405.inc Add default uboot version to 1.1.4

--- a/conf/machine/dht-walnut.conf
+++ b/conf/machine/dht-walnut.conf
@@ -13,13 +13,13 @@ UBOOT_ENTRYPOINT = "0"
 MACHINE_FEATURES = "kernel26 ext2"
 
 TARGET_CPU = "405"
-TARGET_FPU    =  "soft"
 
 #don't try to access tty1
 USE_VT = "0"
 
 SERIAL_CONSOLE = "115200 ttyS0"
 
+PREFERRED_VERSION_u-boot = "1.1.4"
 
 #tune for the 405 cpu
 require conf/machine/include/tune-ppc405.inc
