conf/distro/angstrom-2007.1.conf : Set toolchain to gcc 4.1.1 for dht-walnut. Its a quick hack till we solve the long double issue of gcc 4.1.2

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -105,6 +105,11 @@ PREFERRED_VERSION_gcc-cross         ?= "4.1.2"
 PREFERRED_VERSION_gcc-cross-sdk     ?= "4.1.2"
 PREFERRED_VERSION_gcc-cross-initial ?= "4.1.2"
 
+PREFERRED_VERSION_gcc_dht-walnut               ?= "4.1.1"
+PREFERRED_VERSION_gcc-cross_dht-walnut         ?= "4.1.1"
+PREFERRED_VERSION_gcc-cross-sdk_dht-walnut     ?= "4.1.1"
+PREFERRED_VERSION_gcc-cross-initial_dht-walnut ?= "4.1.1"
+
 PREFERRED_VERSION_binutils          ?= "2.18"
 PREFERRED_VERSION_binutils-cross    ?= "2.18"
 PREFERRED_VERSION_binutils-cross-sdk ?= "2.18"
