Remove final references to BUILD_SYS in staging paths

--- a/conf/distro/sharprom-compatible.conf
+++ b/conf/distro/sharprom-compatible.conf
@@ -20,8 +20,8 @@ FULL_OPTIMIZATION_pn-fetchmail = "-fexpensive-optimizations -fomit-frame-pointer
 OEINCLUDELOGS = "yes"
 KERNEL_CONSOLE = "tty1"
 # prebuilt toolchain doesn't know about -isystem
-export BUILD_CPPFLAGS = "-I${STAGING_DIR}/${BUILD_SYS}/include"
-export TARGET_CPPFLAGS = "-I${STAGING_DIR}/${TARGET_SYS}/include"
+export BUILD_CPPFLAGS = "-I${STAGING_INCDIR_NATIVE}"
+export TARGET_CPPFLAGS = "-I${STAGING_DIR_TARGET}/${layout_includedir}"
 #DEBUG_OPTIMIZATION = "-O -g3"
 #DEBUG_BUILD = "1"
 
