conf/machine/mpc8323e-rdb.conf : Add correct parameters for jffs2 creation

--- a/conf/machine/mpc8323e-rdb.conf
+++ b/conf/machine/mpc8323e-rdb.conf
@@ -13,6 +13,8 @@ MACHINE_FEATURES = "kernel26 usbhost ext2"
 PREFERRED_VERSION_u-boot = "git"
 UBOOT_MACHINE = "MPC8323ERDB_config"
 
+EXTRA_IMAGECMD_jffs2 = "--pad --big-endian --eraseblock=0x20000"
+
 #don't try to access tty1
 USE_VT = "0"
 
